[gd_scene load_steps=18 format=2]

[ext_resource path="res://shaders/DitherMaterial.tres" type="Material" id=1]
[ext_resource path="res://Harmonic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Choices.gd" type="Script" id=3]
[ext_resource path="res://audio/keystoke.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.105882, 0.113725, 0.133333, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 15.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0117647, 0.027451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
Button/colors/font_color = Color( 0.772549, 0.772549, 0.772549, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.254902, 0.254902, 0.254902, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 12.0
content_margin_right = 13.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 2

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 12.0
content_margin_right = 13.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 2
border_width_bottom = 2

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[node name="Choices" type="PanelContainer"]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -400.0
rect_min_size = Vector2( 368, 512 )
theme = SubResource( 7 )
custom_styles/panel = SubResource( 8 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 368.0
margin_bottom = 570.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 368.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 10.0
margin_right = 355.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 368.0
margin_bottom = 422.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ChoicesContainer"]
margin_top = 161.0
margin_right = 368.0
margin_bottom = 161.0
custom_constants/margin_right = 14
custom_constants/margin_left = 14

[node name="OutComeLabel" type="Label" parent="VBoxContainer/ChoicesContainer/MarginContainer"]
visible = false
margin_left = 14.0
margin_top = -16.0
margin_right = 354.0
margin_bottom = 16.0
align = 1
autowrap = true

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 422.0
margin_right = 368.0
margin_bottom = 514.0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2"]
margin_left = 12.0
margin_top = 10.0
margin_right = 355.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 72 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "You must make a choice."
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 514.0
margin_right = 368.0
margin_bottom = 524.0
custom_styles/separator = SubResource( 12 )
custom_constants/separation = 10

[node name="ConfirmChoiceButton" type="Button" parent="VBoxContainer"]
margin_left = 123.0
margin_top = 524.0
margin_right = 245.0
margin_bottom = 560.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 13 )
disabled = true
text = "Confirm Choice "

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
visible = false
margin_left = 145.0
margin_top = 524.0
margin_right = 223.0
margin_bottom = 560.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 13 )
text = "Continue "

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 368.0
margin_bottom = 570.0
custom_styles/separator = SubResource( 12 )
custom_constants/separation = 10

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.645
